[package]
name = "DogWatcher"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = 1 # default is `true`; not needed if not already overridden

[profile.release]
debug = 1 # default is `false`; using `true` is also OK as symbols reside on the host, not the target

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
fugit = "0.3.6"
heapless = "0.7.16"
nb = "1.1.0"
panic-halt = "0.2.0"
panic-probe = "0.3.1"
rp-pico = "0.7.0"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = { version = "0.8.0"}
rtt-target = "0.4.0"
uc8151 = "0.1.4"
usb-device = "0.2.9"
usbd-serial = "0.1.1"

